Fixed Messy bug in Safari misaligning the viz cards - not happening in chrome / FF

--- a/cubetube/static/css/base.css
+++ b/cubetube/static/css/base.css
@@ -959,7 +959,18 @@ header {
     .viz-card .viz-demo canvas {
       width: 100%;
       height: 150px;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%;      
       border-radius: 3px 3px 0px 0px; }
+    .viz-card .viz-demo .player {
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      width: 100%;
+      height: 100%; }	
   .viz-card .play-icon {
     position: absolute;
     top: 50%;
